--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -10,9 +11,18 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "axios": "^0.21.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.1.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
+    "redux-saga": "^1.0.5",
+    "redux-saga-test-plan": "^4.0.0-beta.4",
+    "typesafe-actions": "^4.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +49,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/react-redux": "^7.1.1",
+    "@types/redux-mock-store": "^1.0.1"
   }
 }
